@@ -59,9 +59,18 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
-					<skip>true</skip>
+					<skip>false</skip>
                     <compilerArgs>--enable-preview</compilerArgs>
-                    <!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+				</configuration>
+			</plugin>
+
+			<!-- testing -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 
@@ -221,36 +230,6 @@
 	</build>
 
 	<dependencies>
-		<!-- Spongy Castle -->
-		<dependency>
-			<groupId>com.madgag.spongycastle</groupId>
-			<artifactId>core</artifactId>
-			<version>1.58.0.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.madgag.spongycastle</groupId>
-			<artifactId>prov</artifactId>
-			<version>1.58.0.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.github.novacrypto</groupId>
-			<artifactId>BIP32</artifactId>
-			<version>2019.01.27</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.github.novacrypto</groupId>
-			<artifactId>BIP39</artifactId>
-			<version>2019.01.27</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.github.novacrypto</groupId>
-			<artifactId>BIP44</artifactId>
-			<version>2019.01.27</version>
-		</dependency>
 
 		<dependency>
 			<groupId>fr.acinq.bitcoin</groupId>
@@ -325,7 +304,7 @@
 		<dependency>
 			<groupId>com.esotericsoftware</groupId>
 			<artifactId>kryo</artifactId>
-			<version>5.0.0-RC9</version>
+			<version>5.0.4</version>
 		</dependency>
 
 		<dependency>
@@ -338,7 +317,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.53.Final</version>
+			<version>4.1.49.Final</version>
 		</dependency>
 
 		<dependency>
@@ -352,7 +331,6 @@
 			<artifactId>jvm-libp2p-minimal</artifactId>
 			<version>0.5.1-RELEASE</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
@@ -379,16 +357,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>5.7.1</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.7.1</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -438,35 +409,20 @@
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.11.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.1</version>
+			<version>2.12.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.10</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.3.2</version>
+			<version>2.12.2</version>
 		</dependency>
 
 	</dependencies>
@@ -483,4 +439,5 @@
 			</properties>
 		</profile>
 	</profiles>
+
 </project>
